Require GStreamer 1.10 and above
Odd minor versions are for development version, which means that
checks on 1.9.x should be considered for development while normal
environments should be running the stable.

Some timeline of stable releases:

1.14.4: Tue Oct  2 22:53:01 2018 +0100
1.14.0: Mon Mar 19 20:09:51 2018 +0000
1.12.0: Thu May  4 15:36:55 2017 +0300
1.10.0: Tue Nov  1 17:50:24 2016 +0200

This patch reduces a bit the code paths in channel-display-gst.c

CentOS 7.6         : 1.10.4
Fedora 27          : 1.12.5
Fedora 28-30       : 1.14.x
Debian 9 (Stretch) : 1.10.4

Signed-off-by: Victor Toso <victortoso@redhat.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -215,8 +215,9 @@ AS_IF([test "x$enable_pulse" != "xno"],
 ])
 AM_CONDITIONAL([HAVE_PULSE], [test "x$enable_pulse" = "xyes"])
 
+GST_REQ="1.10"
 SPICE_CHECK_GSTREAMER(GSTAUDIO, 1.0,
-    [gstreamer-1.0 gstreamer-base-1.0 gstreamer-app-1.0 gstreamer-audio-1.0],
+    [gstreamer-1.0 >= $GST_REQ gstreamer-base-1.0 >= $GST_REQ gstreamer-app-1.0 >= $GST_REQ gstreamer-audio-1.0 >= $GST_REQ],
     [SPICE_CHECK_GSTREAMER_ELEMENTS($GST_INSPECT_1_0,
          [gst-plugins-base 1.0], [audioconvert audioresample appsink])
      SPICE_CHECK_GSTREAMER_ELEMENTS($GST_INSPECT_1_0,
@@ -224,10 +225,10 @@ SPICE_CHECK_GSTREAMER(GSTAUDIO, 1.0,
      AS_IF([test x"$missing_gstreamer_elements" = "xyes"],
          SPICE_WARNING([The GStreamer 1.0 audio backend can be built but may not work.]))
     ],
-    [AC_MSG_ERROR([Required GStreamer packages missing])])
+    [AC_MSG_ERROR([Required GStreamer packages missing or system version is below $GST_REQ])])
 
 SPICE_CHECK_GSTREAMER(GSTVIDEO, 1.0,
-    [gstreamer-1.0 gstreamer-base-1.0 gstreamer-app-1.0 gstreamer-video-1.0],
+    [gstreamer-1.0 >= $GST_REQ gstreamer-base-1.0 >= $GST_REQ gstreamer-app-1.0 >= $GST_REQ gstreamer-video-1.0 >= $GST_REQ],
     [missing_gstreamer_elements=""
      SPICE_CHECK_GSTREAMER_ELEMENTS($GST_INSPECT_1_0,
          [gst-plugins-base 1.0], [appsrc videoconvert appsink])
@@ -240,7 +241,7 @@ SPICE_CHECK_GSTREAMER(GSTVIDEO, 1.0,
      AS_IF([test x"$missing_gstreamer_elements" = "xyes"],
          SPICE_WARNING([The GStreamer video decoder can be built but may not work.]))
     ],
-    [AC_MSG_ERROR([Required GStreamer packages missing])])
+    [AC_MSG_ERROR([Required GStreamer packages missing or system version is below $GST_REQ])])
 
 AC_ARG_ENABLE([builtin-mjpeg],
   AS_HELP_STRING([--enable-builtin-mjpeg], [Enable the builtin mjpeg video decoder @<:@default=yes@:>@]),
