meson: Update python module usage
Since version 0.48, the python3 module has been deprecated:

https://mesonbuild.com/Release-notes-for-0-48-0.html#python3-module-is-deprecated

Signed-off-by: Eduardo Lima (Etrunko) <etrunko@redhat.com>
Acked-by: Marc-André Lureau <marcandre.lureau@redhat.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -286,7 +286,7 @@ if spice_gtk_has_gtk
   endif
 
   # keymaps
-  python = import('python3').find_python()
+  python = import('python').find_installation()
   keymapgen = files('./keycodemapdb/tools/keymap-gen')
   keymapcsv = files('./keycodemapdb/data/keymaps.csv')
   keymaps = ['xorgevdev',
