--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,41 +16,39 @@ before_script:
   - git clone ${CI_REPOSITORY_URL/spice-gtk/spice-protocol}
   - (cd spice-protocol && ./autogen.sh --prefix=/usr && make install)
 
-makecheck:
+fedora-autotools:
   script:
-  - ./autogen.sh --enable-static
-  - make -j4
-  - make check
+    # Run with default options
+    - ./autogen.sh --enable-static
+    - make -j4
+    - make check
+    # Run without features
+    - git clean -xfd
+    - ./autogen.sh --enable-static
+          --enable-lz4=no
+          --enable-webdav=no
+          --with-sasl=no
+          --with-coroutine=auto
+          --enable-pulse=no
+          --enable-smartcard=no
+          --enable-usbredir=no
+    - make -j4
+    - make check
 
-makecheck-meson:
+fedora-meson:
   script:
-  - meson build || (cat build/meson-logs/meson-log.txt && exit 1)
-  - ninja -C build
-  - (cd build && meson test) || (cat build/meson-logs/testlog.txt && exit 1)
+    - meson build-default || (cat build-default/meson-logs/meson-log.txt && exit 1)
+    - ninja -C build-default
+    - ninja -C build-default test || (cat build-default/meson-logs/testlog.txt && exit 1)
 
-makecheck_simple:
-  script:
-  - ./autogen.sh --enable-static
-        --enable-lz4=no
-        --enable-webdav=no
-        --with-sasl=no
-        --with-coroutine=auto
-        --enable-pulse=no
-        --enable-smartcard=no
-        --enable-usbredir=no
-  - make -j4
-  - make check
+    - meson build-feat-disabled -Dauto_features=disabled || (cat build-feat-disabled/meson-logs/meson-log.txt && exit 1)
+    - ninja -C build-feat-disabled
+    - ninja -C build-feat-disabled test || (cat build-feat-disabled/meson-logs/testlog.txt && exit 1)
 
-makecheck_simple-meson:
+windows-autotools:
   script:
-  - meson build -Dauto_features=disabled || (cat build/meson-logs/meson-log.txt && exit 1)
-  - ninja -C build
-  - (cd build && meson test) || (cat build/meson-logs/testlog.txt && exit 1)
-
-make-win:
-  script:
-  - dnf install -y mingw64-gcc mingw64-pkg-config mingw64-pixman mingw64-openssl mingw64-gtk3 mingw64-json-glib mingw64-opus mingw64-gstreamer1-plugins-base mingw64-gstreamer1-plugins-good
-  - (cd spice-protocol && make clean && mingw64-configure --prefix=/usr && make install)
-  - NOCONFIGURE=yes ./autogen.sh
-  - PYTHON=python3 mingw64-configure --enable-static
-  - make -j4
+    - dnf install -y mingw64-gcc mingw64-pkg-config mingw64-pixman mingw64-openssl mingw64-gtk3 mingw64-json-glib mingw64-opus mingw64-gstreamer1-plugins-base mingw64-gstreamer1-plugins-good
+    - (cd spice-protocol && make clean && mingw64-configure --prefix=/usr && make install)
+    - NOCONFIGURE=yes ./autogen.sh
+    - PYTHON=python3 mingw64-configure --enable-static
+    - make -j4
