gitlab-ci: add mingw meson build
To keep track of meson builds for windows too.
Note that mingw64-meson requires to be ran inside the folder,
different from common meson. So, some extra steps were done due that.

v1 -> v2:
- Remove initial '_' from build folder filenames (Frediano);
- Always use '-' instead of '_' in build folder filenames (Frediano);

Signed-off-by: Victor Toso <victortoso@redhat.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,3 +79,24 @@ windows-autotools:
     - NOCONFIGURE=yes ./autogen.sh
     - PYTHON=python3 mingw64-configure --enable-static
     - make -j4
+
+windows-meson:
+  artifacts:
+    paths:
+      - build-win64/meson-logs/*.txt
+      - spice-protocol/build-spice-protocol/meson-logs/*.txt
+    when: always
+    expire_in: 1 week
+
+  before_script:
+    - dnf install -y $DEPS_COMMON $DEPS_MINGW
+    - git clone ${CI_REPOSITORY_URL/spice-gtk/spice-protocol}
+    - mkdir spice-protocol/build-spice-protocol && cd spice-protocol/build-spice-protocol
+    - mingw64-meson --prefix=/usr
+    - ninja install
+
+  script:
+    - cd $CI_PROJECT_DIR
+    - mkdir build-win64 && cd build-win64
+    - mingw64-meson -Dgtk_doc=disabled
+    - ninja install
