--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,15 +57,15 @@ fedora-meson:
   before_script:
     - dnf install -y $DEPS_COMMON $DEPS_FEDORA
     - git clone ${CI_REPOSITORY_URL/spice-gtk/spice-protocol}
-    - meson spice-protocol build-spice-protocol --prefix=/usr
+    - meson --buildtype=release spice-protocol build-spice-protocol --prefix=/usr
     - ninja -C build-spice-protocol install
 
   script:
-    - meson build-default
+    - meson --buildtype=release build-default
     - ninja -C build-default
     - ninja -C build-default test
 
-    - meson build-feat-disabled -Dauto_features=disabled
+    - meson --buildtype=release build-feat-disabled -Dauto_features=disabled
     - ninja -C build-feat-disabled
     - ninja -C build-feat-disabled test
 
@@ -92,11 +92,11 @@ windows-meson:
     - dnf install -y $DEPS_COMMON $DEPS_MINGW
     - git clone ${CI_REPOSITORY_URL/spice-gtk/spice-protocol}
     - mkdir spice-protocol/build-spice-protocol && cd spice-protocol/build-spice-protocol
-    - mingw64-meson --prefix=/usr
+    - mingw64-meson --buildtype=release --prefix=/usr
     - ninja install
 
   script:
     - cd $CI_PROJECT_DIR
     - mkdir build-win64 && cd build-win64
-    - mingw64-meson -Dgtk_doc=disabled
+    - mingw64-meson --buildtype=release -Dgtk_doc=disabled
     - ninja install
