build-sys: require usbredir 0.7.1 or above
usbredir-0.7.1 was released on 29-Oct-2015, relatively old compared to
most recent usbredir-0.8.0 from 03-Aug-2018.

* Debian 9 (stretch) -> 0.7.1
* Fedora 21 to Fedora 27 -> 0.7.1
* Fedora 28 to rawhide -> 0.8.0

Signed-off-by: Victor Toso <victortoso@redhat.com>
Acked-by: Christophe Fergeau <cfergeau@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -282,7 +282,7 @@ if test "x$enable_usbredir" = "xno"; then
   have_usbredir="no"
 else
   PKG_CHECK_MODULES([USBREDIR],
-                    [libusb-1.0 >= 1.0.16 libusbredirhost libusbredirparser-0.5],
+                    [libusb-1.0 >= 1.0.16 libusbredirhost >= 0.7.1 libusbredirparser-0.5 >= 0.7.1],
                     [have_usbredir=yes],
                     [have_usbredir=no])
   if test "x$have_usbredir" = "xno" && test "x$enable_usbredir" = "xyes"; then
