--- a/meson.build
+++ b/meson.build
@@ -185,8 +185,10 @@ endif
 
 # usbredir
 spice_gtk_has_usbredir = false
-d1 = dependency('libusbredirparser-0.5', required : get_option('usbredir'))
-d2 = dependency('libusbredirhost', version : '>= 0.4.2', required : get_option('usbredir'))
+usbredir_version = '0.7.1'
+usbredir_version_info = '>= @0@'.format(usbredir_version)
+d1 = dependency('libusbredirparser-0.5', version: usbredir_version_info, required : get_option('usbredir'))
+d2 = dependency('libusbredirhost', version: usbredir_version_info, required : get_option('usbredir'))
 d3 = dependency('libusb-1.0', version : '>= 1.0.16', required : get_option('usbredir'))
 if d1.found() and d2.found() and d3.found()
   spice_glib_deps += [d1, d2, d3]
