ci: Better clean between builds
Clean all git modules, not only the main one.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Christophe de Dinechin <dinechin@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ fedora-autotools:
     - cd ..
     # Run without features
     - git clean -xfd
+    - git submodule foreach --recursive git clean -xfd
     - ./autogen.sh --enable-static
           --enable-lz4=no
           --enable-webdav=no
