--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,10 +30,13 @@ fedora-autotools:
     - (cd spice-protocol && ./autogen.sh --prefix=/usr && make install)
 
   script:
-    # Run with default options
-    - ./autogen.sh --enable-static
+    # Run with default options + out-of-tree
+    - mkdir build
+    - cd build
+    - ../autogen.sh --enable-static
     - make -j4
     - make check
+    - cd ..
     # Run without features
     - git clean -xfd
     - ./autogen.sh --enable-static
