Unify openssl checks
Currently, spice-gtk uses PKG_CHECK_MODULES(SSL, openssl) to detect
openssl CFLAGS and LIBS. And spice-common defines and uses
SPICE_CHECK_OPENSSL macro which calls
PKG_CHECK_MODULES(OPENSSL, openssl).

This means that in order to override openssl CFLAGS or LIBS a user will
have to set both OPENSSL_(CFLAGS|LIBS) and SSL_(CFLAGS|LIBS).

To make this more consistent, make spice-gtk use the
SPICE_CHECK_OPENSSL macro from spice-common.

Signed-off-by: Roman Bogorodskiy <bogorodskiy@gmail.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -114,11 +114,11 @@ PKG_CHECK_MODULES(PIXMAN, pixman-1 >= 0.17.7)
 
 SPICE_GLIB_REQUIRES="${SPICE_GLIB_REQUIRES} pixman-1 >= 0.17.7"
 
-PKG_CHECK_MODULES(SSL, openssl)
+SPICE_CHECK_OPENSSL
 
 PKG_CHECK_EXISTS(openssl,
   [SPICE_GLIB_REQUIRES="${SPICE_GLIB_REQUIRES} openssl"],
-  [SPICE_GLIB_LIBS="${SPICE_GLIB_LIBS} ${SSL_LIBS}"])
+  [SPICE_GLIB_LIBS="${SPICE_GLIB_LIBS} ${OPENSSL_LIBS}"])
 
 SPICE_CHECK_RECORDER
 SPICE_CHECK_SASL
@@ -489,7 +489,7 @@ SPICE_CFLAGS="$SPICE_CFLAGS $WARN_CFLAGS"
 
 AC_SUBST(SPICE_CFLAGS)
 
-SPICE_GLIB_CFLAGS="$PIXMAN_CFLAGS $PULSE_CFLAGS $GSTAUDIO_CFLAGS $GSTVIDEO_CFLAGS $GLIB2_CFLAGS $GIO_CFLAGS $GOBJECT2_CFLAGS $SSL_CFLAGS $SASL_CFLAGS"
+SPICE_GLIB_CFLAGS="$PIXMAN_CFLAGS $PULSE_CFLAGS $GSTAUDIO_CFLAGS $GSTVIDEO_CFLAGS $GLIB2_CFLAGS $GIO_CFLAGS $GOBJECT2_CFLAGS $OPENSSL_CFLAGS $SASL_CFLAGS"
 SPICE_GTK_CFLAGS="$SPICE_GLIB_CFLAGS $GTK_CFLAGS "
 
 AC_SUBST(SPICE_GLIB_CFLAGS)
