build: Add some missing check for headers
Headers macros (HAVE_*_H) are guarding some include in the code.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -48,8 +48,14 @@ keymapcsv = files('subprojects/keycodemapdb/data/keymaps.csv')
 #
 # check for system headers
 #
-headers = ['termios.h',
-           'X11/XKBlib.h']
+headers = [
+  'termios.h',
+  'X11/XKBlib.h',
+  'sys/socket.h',
+  'sys/types.h',
+  'netinet/in.h',
+  'arpa/inet.h',
+]
 
 foreach header : headers
   if compiler.has_header(header)
