--- a/Makefile.am
+++ b/Makefile.am
@@ -22,6 +22,7 @@ DISTCLEANFILES = $(pkgconfig_DATA)
 
 EXTRA_DIST =					\
 	README.md				\
+	CHANGELOG.md				\
 	meson.build				\
 	meson_options.txt			\
 	po/meson.build				\
