build: Do not generate ChangeLog file
There's already a hand written change log and people can look
at repository history.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,18 +38,8 @@ MAINTAINERCLEANFILES =					\
 	gtk-doc.make					\
 	$(NULL)
 
-# Generate the ChangeLog file
-# and insert it into the directory we're about to use to create a tarball.
-.PHONY: gen-ChangeLog gen-THANKS
-gen-ChangeLog:
-	if test -d .git || test -d ../.git; then				\
-	  $(top_srcdir)/build-aux/gitlog-to-changelog > $(distdir)/cl-t;	\
-	  rm -f $(distdir)/ChangeLog;						\
-	  mv $(distdir)/cl-t $(distdir)/ChangeLog;				\
-	fi
-
 # see git-version-gen
-dist-hook: gen-ChangeLog gen-THANKS
+dist-hook: gen-THANKS
 	echo $(VERSION) > $(distdir)/.tarball-version
 
 BUILT_SOURCES = $(top_srcdir)/.version
@@ -66,6 +56,9 @@ DISTCHECK_CONFIGURE_FLAGS =			\
 	--with-gtk=3.0				\
 	$(NULL)
 
+# Generate the THANKS file
+# and insert it into the directory we're about to use to create a tarball.
+.PHONY: gen-THANKS
 gen-THANKS:
 	$(AM_V_GEN)if test -d .git || test -d ../.git; then						\
 	  echo "The spice-gtk team would like to thank the following contributors:" > $(distdir)/t-t;	\
