ci: Clean everything at the beginning
It seems sometimes the working directory is not properly cleaned
causing some issue.
Make sure it's clean before doing a out-of-tree build (which have
problems with not cleaned directory).

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,8 @@ fedora-autotools:
     - (cd spice-protocol && ./autogen.sh --prefix=/usr && make install)
 
   script:
+    - git clean -xfd
+    - git submodule foreach --recursive git clean -xfd
     # Run with default options + out-of-tree
     - mkdir build
     - cd build
