build: Do additional changes to Meson distribution
- copy missing recorder files;
- generate THANKS file.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,7 @@ EXTRA_DIST =					\
 	meson_options.txt			\
 	po/meson.build				\
 	build-aux/git-version-gen		\
+	build-aux/meson-dist			\
 	gtk-doc.make				\
 	.version				\
 	$(NULL)
