meson: Workaround gtk+ exposing Objective C in headers on macOS
Apply the same workaround in 3c9b37bfc7c88969dfe16b8bfd874745e0fceb8a
for Meson.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Marc-André Lureau <marcandre.lureau@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -341,6 +341,11 @@ if spice_gtk_has_gtk
                               '-DGDK_VERSION_MAX_ALLOWED=@0@'.format(gtk_encoded_version)]
 endif
 
+# Workaround gtk+ exposing Objective C: https://gitlab.gnome.org/GNOME/gtk/issues/1737
+if host_machine.system() == 'darwin'
+  spice_gtk_global_cflags += ['-ObjC']
+endif
+
 add_project_arguments(compiler.get_supported_arguments(spice_gtk_global_cflags),
                       language : 'c')
 
