usb-redir: isolate usage of libusb and usbredirhost
As a step toward possibility to present emulated USB devices
to the guest, we remove the knowledge about libusb and
usbredirhost (which depends on libusb) from all the modules
and concentrate it in one (usb backend) which presents
abstract USB objects and internal API to all other modules.
Internal API presents following types of objects:
* SpiceUsbBackend: supports enumeration of local USB devices
  (Windows), hot plug/unplug callbacks (Linux) and events
  handling. It wraps libusb_context
* SpiceUsbBackendDevice: represent local USB device, provides
  access to cached properties of the device, wraps libusb_device
* SpiceUsbBackendChannel: accumulates redirection functionality,
  wraps usbredirhost

Signed-off-by: Yuri Benditovich <yuri.benditovich@daynix.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -121,6 +121,8 @@ spice_client_glib_sources = [
   'usb-device-manager-priv.h',
   'usbutil.c',
   'usbutil.h',
+  'usb-backend.c',
+  'usb-backend.h',
   'vmcstream.c',
   'vmcstream.h',
 ]
