usb-redir: unify device hotplug/unplug for Windows and Linux
Remove Windows-specific part of hotplug detection from
usb-device-manager and win-usb-dev and place it into
USB backend module. Connect the hotplug/unplug detection
in Windows to the same callbacks already used in Linux.
This removes significant part of Windows-specific code
and simpifies things.
Note regarding 'redirecting' property of usb-device-manager:
- Previously usb-device-manager under Windows maintained
  'redirection' property in win-usb-dev
- Now it maintains its own property in both Windows and
  Linux (for GUI and single redirect at a time)
- The USB backend maintains its own 'redirecting' field
  in Windows to prevent update of device list when
  libusb opens the device (device redirection causes
  temporary removal of target device)

Signed-off-by: Yuri Benditovich <yuri.benditovich@daynix.com>
Acked-by: Victor Toso <victortoso@redhat.com>

--- a/meson.build
+++ b/meson.build
@@ -113,7 +113,7 @@ endforeach
 
 deps = []
 if host_machine.system() == 'windows'
-  deps += ['libws2_32', 'libgdi32']
+  deps += ['libws2_32', 'libgdi32', 'libcomctl32']
 endif
 
 foreach dep : deps
