--- a/doc/reference/meson.build
+++ b/doc/reference/meson.build
@@ -39,10 +39,10 @@ ignore_headers = [
 spice_gtk_doc_dep = declare_dependency(link_with : [spice_client_gtk_lib, spice_client_glib_lib])
 
 glib_prefix = dependency('glib-2.0').get_pkgconfig_variable('prefix')
-glib_docpath = join_paths(glib_prefix, 'share', 'gtk-doc', 'html')
+glib_docpath = glib_prefix / 'share' / 'gtk-doc' / 'html'
 gtk_prefix = dependency('gtk+-3.0').get_pkgconfig_variable('prefix')
-gtk_docpath = join_paths(gtk_prefix, 'share', 'gtk-doc', 'html')
-docpath = join_paths(spice_gtk_datadir, 'gtk-doc', 'html')
+gtk_docpath = gtk_prefix / 'share' / 'gtk-doc' / 'html'
+docpath = spice_gtk_datadir / 'gtk-doc' / 'html'
 
 gnome.gtkdoc(meson.project_name(),
              dependencies : spice_gtk_doc_dep,
@@ -55,14 +55,14 @@ gnome.gtkdoc(meson.project_name(),
                '--deprecated-guards="SPICE_DISABLE_DEPRECATED"',
                '--ignore-decorators="G_GNUC_INTERNAL"',
                '--rebuild-types',
-               join_paths(meson.build_root(), 'src', 'spice-version.h')
+               meson.build_root() / 'src' / 'spice-version.h'
              ],
-             src_dir : join_paths(meson.source_root(), 'src'),
+             src_dir : meson.source_root() / 'src',
              fixxref_args: [
                '--html-dir=@0@'.format(docpath),
-               '--extra-dir=@0@'.format(join_paths(glib_docpath, 'glib')),
-               '--extra-dir=@0@'.format(join_paths(glib_docpath, 'gobject')),
-               '--extra-dir=@0@'.format(join_paths(glib_docpath, 'gio')),
-               '--extra-dir=@0@'.format(join_paths(gtk_docpath, 'gtk3')),
+               '--extra-dir=@0@'.format(glib_docpath / 'glib'),
+               '--extra-dir=@0@'.format(glib_docpath / 'gobject'),
+               '--extra-dir=@0@'.format(glib_docpath / 'gio'),
+               '--extra-dir=@0@'.format(gtk_docpath / 'gtk3'),
              ],
             )
