--- a/man/meson.build
+++ b/man/meson.build
@@ -5,7 +5,7 @@ if pod2man.found()
             output : 'spice-client.1',
             input : 'spice-client.pod',
             install : true,
-            install_dir : join_paths(spice_gtk_datadir, 'man', 'man1'),
+            install_dir : spice_gtk_datadir / 'man' / 'man1',
             build_by_default : true,
             command : [pod2man, '-c', 'Spice-GTK Documentation', '@INPUT@', '@OUTPUT@'])
 endif
