usb-redir: define interfaces to support emulated devices
SpiceUsbBackendDevice structure is extended to support
additional kind of device that is emulated by Spice-GTK
and not present locally (and does not have libusb_device),
such device has instead pointer to SpiceUsbEmulatedDevice
abstract structure. Specific implementation of such device
depends on its device type. Implementation module will define
constructor for specific device type.
Device structure is abstract but always starts from table of
virtual functions required to redirect such virtual device.

Signed-off-by: Yuri Benditovich <yuri.benditovich@daynix.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -122,6 +122,7 @@ spice_client_glib_sources = [
   'usbutil.c',
   'usbutil.h',
   'usb-backend.c',
+  'usb-emulation.h',
   'usb-backend.h',
   'vmcstream.c',
   'vmcstream.h',
