usb-redir: enable redirection of emulated CD drive
Add implementation of emulated device to build.
Now it is possible to create emulated CD devices.

Signed-off-by: Yuri Benditovich <yuri.benditovich@daynix.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -157,6 +157,18 @@ elif spice_gtk_coroutine == 'winfiber'
   spice_client_glib_sources += 'coroutine_winfibers.c'
 endif
 
+if spice_gtk_has_usbredir
+  spice_client_glib_sources += [
+    'usb-device-cd.c',
+    'usb-device-cd.h',
+    'cd-scsi.c',
+    'cd-scsi.h',
+    'cd-scsi-dev-params.h',
+    'cd-usb-bulk-msd.c',
+    'cd-usb-bulk-msd.h',
+  ]
+endif
+
 if spice_gtk_has_usbredir and host_machine.system() == 'windows'
   spice_client_glib_sources += ['usbdk_api.c',
                                 'usbdk_api.h']
