build: Avoid line continuation for compatibility with older Meson
This fixes building spice-gtk on Debian 10.

See https://github.com/mesonbuild/meson/issues/4720.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Acked-by: Uri Lublin <uril@redhat.com>

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -23,9 +23,8 @@ endif
 
 # create a static library from a shared one extracting all objects
 # this allows to rewrite part of it if necessary for mocking
-test_lib = \
-  static_library('test-lib',
-                 objects : spice_client_glib_lib.extract_all_objects())
+test_lib = static_library('test-lib',
+                          objects : spice_client_glib_lib.extract_all_objects())
 
 foreach src : tests_sources
   name = 'test-@0@'.format(src).split('.')[0]
